--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,15 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <load src="partials/header.html" />
+    <load src="partials/hero.html" />
+    <load src="partials/aboutus.html" />
+    <load src="partials/price.html" />
+    <load src="partials/ourproducts.html" />
+    <load src="partials/bestsellers.html" />
+    <load src="partials/reviews.html" />
+    <load src="partials/subscription.html" />
+    <load src="partials/footer.html" />
     <script type="module" src="/main.js"></script>
   </body>
 </html>
