--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <load src="partials/header.html" />
+    <main>
     <load src="partials/hero.html" />
     <load src="partials/aboutus.html" />
     <load src="partials/price.html" />
@@ -29,6 +30,7 @@
     <load src="partials/bestsellers.html" />
     <load src="partials/reviews.html" />
     <load src="partials/subscription.html" />
+    </main>
     <load src="partials/footer.html" />
     <script type="module" src="/main.js"></script>
   </body>
