--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
     />
     <title>Minimal</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <script>
+      function lockScroll() {
+        document.body.classList.toggle('lock-scroll');
+      }
+    </script>
   </head>
   <body>
     <load src="partials/header.html" />
